# Germen

./: .clang-format  .clang-tidy  .gitattributes  Appunti Linux.txt  CMakeLists.txt  CMakePresets.json  Descrizione.md  Directory.Build.props.in  LICENSE  Readme.en.md  Readme.md  TODO.md  conanfile.py
CMake/: Conan.cmake  Funzioni.cmake  Piattaforma.cmake
CMake/Compilatori/GCC/: Funzioni.cmake  Impostazioni.cmake
CMake/Compilatori/MSVC/: Funzioni.cmake  Impostazioni.cmake
CMake/Piattaforme/Linux/: Impostazioni.cmake
CMake/Piattaforme/Windows/: Impostazioni.cmake
CMake/Profili/: Base.json  Linux - GCC.json  Linux.json  Windows - MSVC.json  Windows.json
Germen Pulchrum/: CMakeLists.txt  Clock.h  CodaCancellazione.cpp  CodaCancellazione.h  CostantiEdAltro.h  Disegnatore.cpp  Disegnatore.h  GUI.cpp  Icone bandiere.h  Impostazioni.cpp  Impostazioni.h  Internazionalizzazione.cpp  Internazionalizzazione.h  IntestazionePrecompilata.h  Main.cpp  Markdown.cpp  Markdown.h  Temi.cpp  TestiGUI.h
Germen Pulchrum/Diagramma/: Diagramma.cpp  Diagramma.h  Vec2.h
Germen Pulchrum/Estensioni ImGui/: Barra di stato.cpp  Estensioni.h
Germen Pulchrum/Internazionalizzazione/en_GB/LC_MESSAGES/: Lingua.mo
Germen Pulchrum/Lingue/en_GB/LC_MESSAGES/: Lingua.mo  Lingua.po
Profili Conan/: Linux GCC 12 x64 debug  Linux GCC 12 x64 release  Linux GCC 13 x64 debug  Linux GCC 13 x64 release  Linux GCC 14 x64 debug  Linux GCC 14 x64 release  Windows Visual Studio 2022 v143 x64 debug  Windows Visual Studio 2026 v143 x64 debug  Windows Visual Studio 2026 v143 x64 release  Windows Visual Studio 2026 v145 x64 debug  Windows Visual Studio 2026 v145 x64 release  Windows v143 x64 release
Spell Checker/: Parole ignorate.dic  en-GB_User.dic  it-IT_User.dic
Strumenti/: BinaryToCompressedC.cpp  CMakeLists.txt  IncorporaFile.cpp
Terze parti/: CMakeLists.txt  ImGui-Config.h  ImGui-Config.patch  Readme.en.md  Readme.md
Terze parti/Fonts/BabelStone Flags/: Flag PUA mapping.txt  Licenza.md  Unicode emoji sequences.txt
Terze parti/Fonts/Noto Color Emoji/: Licenza.txt
